[package]
name = "address-literal"
version = "1.2.3"
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macro for converting Address(H160) literals to Address(H160) at compile time."
keywords = ["ethereum", "proc-macro", "literals"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
primitive-types = { version = "0.12.1", default-features = false, features = ["rustc-hex"] }
